bin/neam_c_api.h

/* ============================================================================
 * Opaque Handle Types
 * ============================================================================ */

/** @brief Opaque handle to a Neam runtime instance */
typedef struct NeamRuntime NeamRuntime;
/** @brief Opaque handle to an execution result */
typedef struct NeamResult NeamResult;
/** @brief Opaque handle to a Neam value */
typedef struct NeamValue NeamValue;
/** @brief Opaque handle to an error */
typedef struct NeamError NeamError;
/** @brief Opaque handle to bytecode bundle */
typedef struct NeamBytecode NeamBytecode;
/* ============================================================================
 * Value Type Enumeration
 * ============================================================================ */

/**
 * @brief Enumeration of Neam value types
 */
typedef enum NeamValueType {
  NEAM_TYPE_NIL = 0,
  NEAM_TYPE_BOOL = 1,
  NEAM_TYPE_NUMBER = 2,
  NEAM_TYPE_STRING = 3,
  NEAM_TYPE_LIST = 4,
  NEAM_TYPE_MAP = 5,
  NEAM_TYPE_FUNCTION = 6,
  NEAM_TYPE_AGENT = 7,
  NEAM_TYPE_OBJECT = 8
} NeamValueType;
/* ============================================================================
 * Callback Function Types
 * ============================================================================ */

/**
 * @brief Callback for tool implementation
 *
 * @param runtime The runtime context
 * @param arg_count Number of arguments
 * @param args Array of argument values
 * @param user_data User-provided context pointer
 * @return Result value (caller takes ownership)
 */
typedef NeamValue* (*NeamToolFunc)(
    NeamRuntime* runtime,
    int arg_count,
    NeamValue** args,
    void* user_data
);
/* ============================================================================
 * Version Information
 * ============================================================================ */

/**
 * @brief Get the Neam runtime version string
 * @return Version string (e.g., "0.3.0")
 */
NEAM_API const char* neam_version(void);
/**
 * @brief Get the major version number
 * @return Major version
 */
NEAM_API int neam_version_major(void);
/**
 * @brief Get the minor version number
 * @return Minor version
 */
NEAM_API int neam_version_minor(void);
/**
 * @brief Get the patch version number
 * @return Patch version
 */
NEAM_API int neam_version_patch(void);
/* ============================================================================
 * Runtime Lifecycle
 * ============================================================================ */

/**
 * @brief Create a new Neam runtime with default settings
 * @return New runtime handle, or NULL on failure
 */
NEAM_API NeamRuntime* neam_runtime_new(void);
/**
 * @brief Create a new Neam runtime with JSON configuration
 *
 * Configuration options (all optional):
 * - "default_provider": string - Default LLM provider ("ollama", "openai")
 * - "default_model": string - Default model name
 * - "thread_safe": bool - Enable thread-safe mode
 * - "max_stack_depth": int - Maximum call stack depth
 * - "enable_file_io": bool - Allow file operations
 * - "enable_network": bool - Allow network operations
 * - "enable_shell": bool - Allow shell command execution
 * - "working_directory": string - Working directory for file operations
 *
 * @param config_json JSON configuration string
 * @return New runtime handle, or NULL on failure
 */
NEAM_API NeamRuntime* neam_runtime_new_with_config(const char* config_json);
/**
 * @brief Free a runtime instance
 * @param runtime Runtime to free (may be NULL)
 */
NEAM_API void neam_runtime_free(NeamRuntime* runtime);
/**
 * @brief Check if a runtime handle is valid
 * @param runtime Runtime to check
 * @return Non-zero if valid, zero if NULL or invalid
 */
NEAM_API int neam_runtime_is_valid(NeamRuntime* runtime);
/**
 * @brief Reset runtime state without destroying it
 * @param runtime Runtime to reset
 */
NEAM_API void neam_runtime_reset(NeamRuntime* runtime);
/* ============================================================================
 * Code Compilation
 * ============================================================================ */

/**
 * @brief Compile Neam source code to bytecode
 *
 * @param runtime Runtime context
 * @param source Source code string
 * @return Bytecode handle, or NULL on error
 */
NEAM_API NeamBytecode* neam_compile(NeamRuntime* runtime, const char* source);
/**
 * @brief Compile Neam source file to bytecode
 *
 * @param runtime Runtime context
 * @param path Path to source file
 * @return Bytecode handle, or NULL on error
 */
NEAM_API NeamBytecode* neam_compile_file(NeamRuntime* runtime, const char* path);
/**
 * @brief Free compiled bytecode
 * @param bytecode Bytecode to free (may be NULL)
 */
NEAM_API void neam_bytecode_free(NeamBytecode* bytecode);
/**
 * @brief Serialize bytecode to bytes
 *
 * @param bytecode Bytecode to serialize
 * @param out_size Output parameter for size
 * @return Byte array (caller must free with neam_bytes_free), or NULL on error
 */
NEAM_API uint8_t* neam_bytecode_to_bytes(NeamBytecode* bytecode, size_t* out_size);
/**
 * @brief Load bytecode from bytes
 *
 * @param bytes Byte array
 * @param size Size of byte array
 * @return Bytecode handle, or NULL on error
 */
NEAM_API NeamBytecode* neam_bytecode_from_bytes(const uint8_t* bytes, size_t size);
/**
 * @brief Free bytes returned by neam_bytecode_to_bytes
 * @param bytes Bytes to free
 */
NEAM_API void neam_bytes_free(uint8_t* bytes);
/* ============================================================================
 * Code Execution
 * ============================================================================ */

/**
 * @brief Run Neam source code directly
 *
 * @param runtime Runtime context
 * @param source Source code string
 * @return Execution result (caller takes ownership)
 */
NEAM_API NeamResult* neam_run(NeamRuntime* runtime, const char* source);
/**
 * @brief Run a Neam source file
 *
 * @param runtime Runtime context
 * @param path Path to source file
 * @return Execution result (caller takes ownership)
 */
NEAM_API NeamResult* neam_run_file(NeamRuntime* runtime, const char* path);
/**
 * @brief Run compiled bytecode
 *
 * @param runtime Runtime context
 * @param bytecode Compiled bytecode
 * @return Execution result (caller takes ownership)
 */
NEAM_API NeamResult* neam_run_bytecode(NeamRuntime* runtime, NeamBytecode* bytecode);
/**
 * @brief Run bytecode from raw bytes
 *
 * @param runtime Runtime context
 * @param bytes Bytecode bytes
 * @param size Size of byte array
 * @return Execution result (caller takes ownership)
 */
NEAM_API NeamResult* neam_run_bytecode_bytes(
    NeamRuntime* runtime,
    const uint8_t* bytes,
    size_t size
);
/* ============================================================================
 * Result Handling
 * ============================================================================ */

/**
 * @brief Check if result represents an error
 * @param result Result to check
 * @return Non-zero if error, zero if success
 */
NEAM_API int neam_result_is_error(NeamResult* result);
/**
 * @brief Get all output emitted during execution
 * @param result Execution result
 * @return Combined output string (owned by result)
 */
NEAM_API const char* neam_result_output(NeamResult* result);
/**
 * @brief Get the return value from execution
 * @param result Execution result
 * @return Value (caller takes ownership), or NULL if error
 */
NEAM_API NeamValue* neam_result_value(NeamResult* result);
/**
 * @brief Get error from result
 * @param result Execution result
 * @return Error handle (owned by result), or NULL if no error
 */
NEAM_API NeamError* neam_result_error(NeamResult* result);
/**
 * @brief Free an execution result
 * @param result Result to free (may be NULL)
 */
NEAM_API void neam_result_free(NeamResult* result);
/* ============================================================================
 * Value Creation
 * ============================================================================ */

/**
 * @brief Create a nil value
 * @return New value (caller takes ownership)
 */
NEAM_API NeamValue* neam_value_nil(void);
/**
 * @brief Create a boolean value
 * @param value Boolean value (0 = false, non-zero = true)
 * @return New value (caller takes ownership)
 */
NEAM_API NeamValue* neam_value_bool(int value);
/**
 * @brief Create a number value
 * @param value Numeric value
 * @return New value (caller takes ownership)
 */
NEAM_API NeamValue* neam_value_number(double value);
/**
 * @brief Create a string value
 * @param value String content
 * @param length String length (or -1 for null-terminated)
 * @return New value (caller takes ownership)
 */
NEAM_API NeamValue* neam_value_string(const char* value, int length);
/**
 * @brief Create an empty list value
 * @return New list value (caller takes ownership)
 */
NEAM_API NeamValue* neam_value_list_new(void);
/**
 * @brief Append a value to a list
 *
 * @param list List to append to
 * @param item Value to append (ownership transferred to list)
 */
NEAM_API void neam_value_list_append(NeamValue* list, NeamValue* item);
/**
 * @brief Create an empty map value
 * @return New map value (caller takes ownership)
 */
NEAM_API NeamValue* neam_value_map_new(void);
/**
 * @brief Set a key-value pair in a map
 *
 * @param map Map to modify
 * @param key Key string
 * @param value Value to set (ownership transferred to map)
 */
NEAM_API void neam_value_map_set(NeamValue* map, const char* key, NeamValue* value);
/* ============================================================================
 * Value Access
 * ============================================================================ */

/**
 * @brief Get the type of a value
 * @param value Value to check
 * @return Value type
 */
NEAM_API NeamValueType neam_value_type(NeamValue* value);
/**
 * @brief Get boolean from value
 * @param value Value to extract from
 * @return Boolean value (0 or 1)
 */
NEAM_API int neam_value_as_bool(NeamValue* value);
/**
 * @brief Get number from value
 * @param value Value to extract from
 * @return Numeric value
 */
NEAM_API double neam_value_as_number(NeamValue* value);
/**
 * @brief Get string from value
 * @param value Value to extract from
 * @return String pointer (owned by value), or NULL if not a string
 */
NEAM_API const char* neam_value_as_string(NeamValue* value);
/**
 * @brief Get string length
 * @param value String value
 * @return Length in bytes
 */
NEAM_API size_t neam_value_string_length(NeamValue* value);
/**
 * @brief Get list length
 * @param value List value
 * @return Number of items
 */
NEAM_API size_t neam_value_list_length(NeamValue* value);
/**
 * @brief Get item from list by index
 *
 * @param value List value
 * @param index Index (0-based)
 * @return Value at index (caller takes ownership), or NULL if out of bounds
 */
NEAM_API NeamValue* neam_value_list_get(NeamValue* value, size_t index);
/**
 * @brief Get value from map by key
 *
 * @param value Map value
 * @param key Key string
 * @return Value for key (caller takes ownership), or NULL if not found
 */
NEAM_API NeamValue* neam_value_map_get(NeamValue* value, const char* key);
/**
 * @brief Check if map contains a key
 *
 * @param value Map value
 * @param key Key to check
 * @return Non-zero if key exists
 */
NEAM_API int neam_value_map_has(NeamValue* value, const char* key);
/**
 * @brief Convert value to JSON string
 *
 * @param value Value to convert
 * @return JSON string (caller must free with neam_string_free)
 */
NEAM_API char* neam_value_to_json(NeamValue* value);
/**
 * @brief Create value from JSON string
 *
 * @param json JSON string
 * @return Value (caller takes ownership), or NULL on parse error
 */
NEAM_API NeamValue* neam_value_from_json(const char* json);
/**
 * @brief Free a value
 * @param value Value to free (may be NULL)
 */
NEAM_API void neam_value_free(NeamValue* value);
/**
 * @brief Free a string returned by neam_value_to_json
 * @param str String to free
 */
NEAM_API void neam_string_free(char* str);
/* ============================================================================
 * Global Variable Access
 * ============================================================================ */

/**
 * @brief Get a global variable by name
 *
 * @param runtime Runtime context
 * @param name Variable name
 * @return Value (caller takes ownership), or NULL if not found
 */
NEAM_API NeamValue* neam_get_global(NeamRuntime* runtime, const char* name);
/**
 * @brief Set a global variable
 *
 * @param runtime Runtime context
 * @param name Variable name
 * @param value Value to set (ownership transferred)
 * @return Zero on success, non-zero on error
 */
NEAM_API int neam_set_global(NeamRuntime* runtime, const char* name, NeamValue* value);
/* ============================================================================
 * Tool Registration
 * ============================================================================ */

/**
 * @brief Register an external tool
 *
 * @param runtime Runtime context
 * @param name Tool name
 * @param description Tool description (for agent context)
 * @param func Tool implementation callback
 * @param user_data User context (passed to callback)
 * @return Zero on success, non-zero on error
 */
NEAM_API int neam_register_tool(
    NeamRuntime* runtime,
    const char* name,
    const char* description,
    NeamToolFunc func,
    void* user_data
);
/**
 * @brief Unregister a tool
 *
 * @param runtime Runtime context
 * @param name Tool name
 * @return Zero on success, non-zero if not found
 */
NEAM_API int neam_unregister_tool(NeamRuntime* runtime, const char* name);
/**
 * @brief Check if a tool is registered
 *
 * @param runtime Runtime context
 * @param name Tool name
 * @return Non-zero if registered
 */
NEAM_API int neam_has_tool(NeamRuntime* runtime, const char* name);